# sensor-degradation-filter

./: .gitmodules  CMakeLists.txt  README.md  requirements_python3-12.txt  setup.py
argos/: real_kheperaiv_experiment.argos
docs/: dev_notes.md  parameter_file_setup.md  utility_scripts_functions.md
examples/param/: param_multi_robot_real_1d_dynamic_degradation_DELTA.argos  param_multi_robot_sim_1d_dynamic_degradation_DELTA.argos  param_multi_robot_sim_1d_dynamic_degradation_ORACLE.argos  param_multi_robot_sim_1d_static_degradation.argos
include/sensor_degradation_filter/: Util.hpp
include/sensor_degradation_filter/algorithms/: CollectivePerception.hpp  ExtendedKalmanFilter.hpp  SensorDegradationFilter.hpp
include/sensor_degradation_filter/loop_functions/: RealKheperaIVExperimentLoopFunctions.hpp  SensorDegLoopFunctions.hpp
scripts/bash/: hpc_multi_job_compute_rmsd_df.sh  hpc_multi_job_dynamic_topo_dynamic_deg_run_DELTA.sh  hpc_multi_job_dynamic_topo_dynamic_deg_run_ORACLE.sh  hpc_multi_job_dynamic_topo_extract_conv_acc_data.sh  hpc_multi_job_extract_dynamic_degradation_data.sh  hpc_multi_job_static_topo_extract_conv_acc_data.sh  sbatch_dynamic_topo_dynamic_deg_run_DELTA.sh  sbatch_dynamic_topo_dynamic_deg_run_ORACLE.sh  sbatch_dynamic_topo_static_deg_run.sh  tar_files_into_flat_dir.sh
scripts/python/: compute_rmsd_df.py  dynamic_degradation_viz_module.py  extract_dynamic_degradation_data.py  extract_isolated_rmsd_data.py  static_degradation_viz_module.py
src/algorithms/: DynamicDegradationFilterDelta.cpp
src/controllers/: KheperaIVDiffusionMotion.cpp
src/loop_functions/: CMakeLists.txt  RealKheperaIVExperimentLoopFunctions.cpp  SensorDegLoopFunctions.cpp
vicon_sdk/: CMakeLists.txt
